# npc-mind-rs

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  clippy.toml  mcp-mind-remote.json  mcp-testing-guide.md  rustfmt.toml  test_chat_probe.py  test_check.py  test_pipeline.py  test_step3.py  test_tools_count.py
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
data/: A FAREWELL TO ARMS.txt  Sense and Sensibility.txt  THE ADVENTURES OF TOM SAWYER.txt  The Sex Life of the Gods.txt  he Sex Life of the Gods.txt  prompt2.txt  prompt_test.txt  result.json  result2.json  test_scenario.json  결과1.json  결과2.json
data/huckleberry_finn/: Adventures of Huckleberry Finn.txt
data/huckleberry_finn/archived/: s2.json
data/listener_perspective/: README.md
data/listener_perspective/prefilter/: patterns.toml
data/listener_perspective/prototypes/: README.md  magnitude_normal.toml  magnitude_strong.toml  magnitude_weak.toml  sign_invert.toml  sign_keep.toml
data/listener_perspective/results/: README.md  baseline.md
data/listener_perspective/testcases/: README.md  sign_benchmark.toml
data/presets/: gyo_ryong.json  mu_baek.json
data/treasure_island/: TREASURE ISLAND.txt
data/treasure_island/ch01_parlour_confrontation/: 빌리vs리브시.json
data/treasure_island/ch26_mast_duel/: 짐vs이즈라엘.json
data/treasure_island/ch28_silver_negotiation/: 실버vs짐.json
data/treasure_island/ch28_silvers_bargain/: 짐vs실버_협상.json
data/treasure_island/ch28_silvers_gambit/: 실버의도박 copy.json
data/treasure_island/ch29_black_spot/: s3.json  실버vs조지.json
data/treasure_island/ch32_voice_among_trees/: 유령의_목소리.json  유령의_목소리_테스트결과.json  유령의_목소리_테스트결과.md
docs/: a-dimension-guide.md  appraisal-engine.md  architecture-v2.md  c-dimension-guide.md  collaboration-workflow.md  guide-mapping-table.md  h-dimension-guide.md  hexaco-occ-emotion-mapping.md  hexaco-research.md  locale-guide.md  o-dimension-guide.md  occ-emotion-model.md  pad-stimulus-design-decisions.md  situation-structure.md  tech-debt-audit-2026-04.md  webui-redesign-task.md
docs/HEXACO/: e-dimension-guide.md  h-dimension-guide.md  o-dimension-guide.md  x-dimension-guide.md
docs/api/: api-reference.md  integration-guide.md
docs/architecture/: adr-001-rig-agent-integration.md  architecture-v2.md  b-plan-implementation.md  dispatch-v2-internals.md  event-handler-catalog.md  frontend-architecture.md  npc-tool-memory-design.md  situation-structure.md  system-design-eventbus-cqrs.md  system-design-review-2026-04.md  system-overview.md  unified-event-protocol-analysis.md
docs/changes/: 2026-04-25-correlation-id-activation.md  2026-04-25-parent-event-id-activation.md  README.md  memory-step-a.md  memory-step-b.md
docs/emotion/: adr-pad-v2-redesign.md  appraisal-engine.md  hexaco-occ-emotion-mapping.md  occ-emotion-model.md  pad-anchor-score-matrix.md  pad-stimulus-design-decisions.md  phase7-converter-integration.md  sign-classifier-design.md
docs/guide/: guide-mapping-table.md
docs/infra/: embedding-adapter-migration.md
docs/memory/: 01-terms-and-rules.md  02-ddd-modeling.md  03-implementation-design.md
docs/personality/facets/: a-dimension-guide.md  c-dimension-guide.md  e-dimension-guide.md  h-dimension-guide.md  o-dimension-guide.md  x-dimension-guide.md
docs/tasks/: correlation-id-activation.md  parent-event-id-activation.md  read-side-activation.md  stream-return-pattern-migration.md
locales/: en.toml  ko.toml
locales/anchors/: ko.embeddings.json  ko.toml
mcp/: README.md  mind_studio_server.py  requirements.txt
mcp/archive/: chat_raw.py  chat_test.py  chat_test2.py  mind_studio_server.py
mcp/docs/: agent-playbook.md  architecture.md  quality-metrics.md  rest-parity.md  tools-reference.md  troubleshooting.md
mcp/skills/npc-mind-testing/: SKILL.md
mcp/skills/npc-scenario-creator/: SKILL.md
mind-studio-ui/: index.html  package-lock.json  package.json  vite.config.ts
mind-studio-ui/src/: App.tsx
mind-studio-ui/src/__tests__/: api-client.test.ts  handlers.test.ts  (+4 more)
sim/: dispatch_v2_sim.py  dispatch_v2_sim2.py
src/: lib.rs  ports.rs
src/adapter/: anchor_common.rs  embed_analyzer.rs  file_anchor_source.rs  json_anchor_source.rs  llama_timings.rs  memory_repository.rs  mod.rs  ort_embedder.rs  rig_chat.rs  sqlite_memory.rs  sqlite_rumor.rs  toml_anchor_source.rs
src/application/: dialogue_agent.rs  dialogue_orchestrator.rs  dialogue_test_service.rs  dto.rs  error.rs  event_bus.rs  event_service.rs  event_store.rs  formatted_service.rs  memory_agent.rs  memory_projector.rs  memory_store.rs  mind_service.rs  mod.rs  pipeline.rs  projection.rs  relationship_service.rs  scenario_seeds.rs  scene_service.rs  situation_service.rs  tiered_event_bus.rs
src/domain/: aggregate.rs  emotion.rs  event.rs  guide.rs  memory.rs  mod.rs  pad.rs  pad_anchors.rs  pad_table.rs  personality.rs  relationship.rs  rumor.rs  scene_id.rs  tuning.rs
src/presentation/: formatter.rs  korean.rs  locale.rs  memory_formatter.rs  mod.rs
tests/: anchor_source_test.rs  application_test.rs  command_test.rs  conversation_stream_test.rs  coverage_gap_test.rs  dialogue_agent_test.rs  dialogue_converter_integration.rs  dialogue_flow_test.rs  dialogue_no_lp_passthrough.rs  dialogue_orchestrator_test.rs  directive_test.rs  director_test.rs  dispatch_v2_test.rs  embed_test.rs  emotion_test.rs  event_bus_test.rs  event_store_test.rs  event_test.rs  guide_test.rs  listener_perspective_integration_bench.rs  llama_timings_test.rs  llm_monitor_test.rs  locale_test.rs  magnitude_bench.rs  magnitude_classifier_bench.rs  memory_agent_test.rs  memory_consolidation_test.rs  memory_injection_test.rs  memory_projector_test.rs  memory_relationship_cause_test.rs  memory_telling_test.rs  memory_test.rs  memory_world_overlay_test.rs  pad_anchor_count_bench.rs  pad_benchmark_test.rs  pad_colbert_bench.rs  pad_gemini_bench.rs  pad_individual_scores.rs  pad_test.rs  personality_test.rs  (+12 more)
tests/common/: in_memory_rumor.rs  in_memory_store.rs  mock_chat.rs  mod.rs  prefilter.rs
tests/data/: scenario_basic.json
(+200 files in other folders)
