[package]
name = "npc-mind"
version = "0.1.0"
edition = "2024"
description = "NPC Psychological Engine: HEXACO personality → OCC emotion → LLM guide"

[features]
default = []
embed = ["dep:bge-m3-onnx-rust"]
chat = ["dep:rig-core", "dep:async-trait", "dep:tokio", "dep:futures", "dep:async-stream"]
mind-studio = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
bge-m3-onnx-rust = { git = "https://github.com/bumkoo/bge-m3-onnx-rust.git", optional = true }
rig-core = { version = "0.33", optional = true, default-features = false, features = ["reqwest-native-tls"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
mcp-sdk = { version = "0.1", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bin]]
name = "npc-mind-studio"
path = "src/bin/mind-studio/main.rs"
required-features = ["mind-studio"]
