[package]
name = "npc-mind"
version = "0.1.0"
edition = "2024"
description = "NPC Psychological Engine: HEXACO personality → OCC emotion → LLM guide"

[features]
default = []
embed = ["dep:bge-m3-onnx-rust", "dep:rusqlite", "dep:uuid", "dep:sqlite-vec", "dep:zerocopy"]
chat = ["dep:rig-core", "dep:async-trait", "tokio/rt-multi-thread", "tokio/macros", "dep:async-stream", "dep:reqwest", "dep:bytes"]
mind-studio = ["dep:axum", "tokio/rt-multi-thread", "tokio/macros", "dep:tower-http", "dep:tracing-subscriber", "dep:rmcp", "dep:futures-util", "dep:uuid", "dep:async-stream"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
# 코어 EventBus는 tokio::sync::broadcast를 내부 구현으로 사용한다.
# 공개 API는 futures::Stream 타입만 노출하므로 호출자는 tokio를 인식할 필요 없음.
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
bge-m3-onnx-rust = { git = "https://github.com/bumkoo/bge-m3-onnx-rust.git", optional = true }
rig-core = { version = "0.33", optional = true, default-features = false, features = ["reqwest-native-tls"] }
async-trait = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "stream"] }
bytes = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"], optional = true }
rmcp = { version = "0.16", optional = true, features = ["server"] }
futures-util = { version = "0.3", optional = true }
uuid = { version = "1.11", features = ["v4"], optional = true }
rusqlite = { version = "0.33", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", optional = true }

[dev-dependencies]
approx = "0.5"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
regex = "1"
tokenizers = "0.21"
# 통합 테스트에서 EventBus broadcast Stream 소비 검증용 (feature 플래그와 무관하게 필요)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[bin]]
name = "npc-mind-studio"
path = "src/bin/mind-studio/main.rs"
required-features = ["mind-studio"]
